# Sindota

./: .gitignore  README.md
api/: README.md  Sindota.cabal  server.crt  server.key  sqlite.db  stack.yaml
api/src/: App.hs  JsonModel.hs  Model.hs  Utils.hs
api/src/Api/: Admin.hs  Announce.hs  Auth.hs  AuthJWT.hs  Game.hs  Main.hs  Question.hs  Tournament.hs  User.hs
api/src/Model/: Model.hs  SecretKeyPurpose.hs  TournamentStatus.hs
cert/: server.crt  server.csr  server.key  server.pass.key  server.pem
front/: package-lock.json  package.json
front/public/: index.html
front/src/: #App.jsx#  App.css  App.jsx  AuthForm.jsx  Dashboard.jsx  Feed.jsx  Store.js  index.js  localization.js  utils.js
front/src/Announce/: Announce.js  Create.jsx
front/src/Game/: Create.jsx  Game.js
front/src/Question/: All.jsx  Create.jsx  Question.js
front/src/Tournament/: All.jsx  Create.jsx  Details.jsx  Tournament.js
iot/client/: client.cabal  client.sh  ttyUSB0
iot/device/: device.ino
