name:                Sindota
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Sindota#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Model
                     , Model.SecretKeyPurpose
                     , Model.UserStatus
                     , Model.Model
                     , JsonModel
                     , Utils
                     , Api.Main
                     , Api.Auth
                     , Api.AuthJWT
                     , Api.User
                     , Api.Admin
  build-depends:       HUnit
                     , QuickCheck
                     , aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , cryptohash-sha256
                     , deepseq
                     , derive
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-api-data
                     , http-conduit
                     , http-types
                     , monad-control
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , process
                     , quickcheck-instances
                     , random
                     , resourcet
                     , servant
                     , servant-auth
                     , servant-auth-server
                     , servant-server
                     , servant-docs
                     , string-conversions
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-extra
                     , wai-cors
                     , warp
                     , word8
  ghc-options:       -Wall
                     -fno-warn-unused-do-bind
  default-extensions: OverloadedStrings
                      TypeFamilies
                      TypeOperators
                      DataKinds
                      FlexibleContexts
                      ScopedTypeVariables
                      DeriveGeneric
  default-language:    Haskell2010

executable Sindota-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Sindota
  default-language:    Haskell2010

test-suite Sindota-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Sindota
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zelinskiy/Sindota
